# Sale-app

./: .gitignore  AI_USAGE.md  CLAUDE.md  README.md  pyproject.toml
report/: .gitignore  main.tex
src/: docker-compose.yml  experiments.ipynb
src/alembic/: env.py
src/alembic/versions/: be6ccfa034ef_init.py  c7a41f2d9e10_v3_scope_logs.py
src/app/: db.py  main.py  seed.py  storage.py
src/app/api/: web.py
src/app/auth/: __init__.py  deps.py
src/app/core/: config.py
src/app/core/schema/: labels.py  models.py  report.py
src/app/domain/: assign.py  perm.py  pipeline.py  result.py  sale.py  stage.py
src/app/rec/: benchmark.py  candidate.py  registry.py  service.py  types.py  weight.py
src/app/rec/artifacts/: benchmark.json
src/app/rec/visitors/: hist.py  load.py  (+3 more)
src/app/repo/: __init__.py  agency.py  log.py  oppo.py  sale.py  scope.py  stats.py  types.py
src/app/services/: agency_assignment.py  agency_management.py  opportunity_assignment.py  opportunity_management.py  overview.py  report_access.py  report_submission.py  sale_management.py  sale_offboarding.py  stage_transition.py
src/app/static/: app.css  kanban.css
src/app/templates/: _kanban.html  agencies.html  agency_detail.html  base.html  dashboard.html  login.html  logs.html  opportunities.html  opportunity_detail.html  recommendations.html  sale_detail.html  sales.html  team.html
src/tests/: TEST_CASES.md  test_assign.py  test_benchmark.py  test_http.py  test_perm.py  test_rec_service.py  test_registry.py  test_repo.py  test_sale.py  test_seed.py  test_stage.py  test_storage_workflow.py
