[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sales-demo"
version = "0.1.0"
description = "Sale -> Dai ly -> Co hoi ban hang demo (hiring test)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1",
    "pwdlib[argon2]>=0.2",
    "itsdangerous>=2.2",
    "pandas>=2.2",
    "alembic>=1.14",
    "python-multipart>=0.0.12",
    "minio>=7.2",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "httpx>=0.27",
    "pandas-stubs>=3.0.3.260530",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["statsmodels.*", "sklearn.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
